# Chess-Game

./: CMakeLists.txt
Include/Event/: EventManager.h  SeasonEvent.h
Include/Rule/: Rules.h
Src/Event/: EventManager.cpp  MassacreAbillity.cpp  Mission.cpp  SeasonEvent.cpp
Src/Gameposition/: GamePosition.cpp
Src/Player/: GetPlayer.cpp  Player.cpp  Watcher.cpp
